# fin-safety-inspect

./: .gitignore  LICENSE  README.md  RUN.md  dump_cross_model.py  dump_failures.py  dump_judge_diff.py  dump_log.py  pyproject.toml  run_smoke.ps1  test_langchain.py  test_relay.py
docs/: baseline-v0.1.md  baseline-v0.2.0.md  cross-model-baseline.md
docs/blog/: 2026-04-30-en-three-failure-modes.md  2026-04-30-en-twitter-thread.md  2026-04-30-zh-three-failure-modes.md
src/fin_safety_inspect/: __init__.py
src/fin_safety_inspect/datasets/: __init__.py  fintrust.py
src/fin_safety_inspect/examples/: mock_helper.py
src/fin_safety_inspect/scorers/: __init__.py  keyword_refusal.py  llm_judge_refusal.py  tool_call_state.py
src/fin_safety_inspect/solvers/: __init__.py  langgraph_solver.py
src/fin_safety_inspect/tasks/: __init__.py  financebench_numeric.py  fintrust_safety.py
tests/: test_scorer_llm_judge.py  test_solver_langgraph.py  test_tasks_smoke.py
