[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fin-safety-inspect"
version = "0.1.0.dev0"
description = "Inspect AI task pack for financial agent safety + LangGraph adapter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "acai777" }]
keywords = ["llm", "agent", "safety", "finance", "inspect-ai", "langgraph", "evaluation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "inspect-ai>=0.3.50",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]
# Backend extras — install one of these to actually run mock_helper or any LangGraph agent.
anthropic = ["langchain>=0.3.0", "langchain-anthropic>=0.3.0"]
openai    = ["langchain>=0.3.0", "langchain-openai>=0.2.0"]
deepseek  = ["langchain>=0.3.0", "langchain-openai>=0.2.0"]  # DeepSeek uses OpenAI-compatible API

[project.urls]
Homepage = "https://github.com/acai777/fin-safety-inspect"
Issues = "https://github.com/acai777/fin-safety-inspect/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fin_safety_inspect"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]
